trunk/Archive2/42/72f078a6690738/output
main.cpp: In function 'void sendToAddressV(int, __va_list_tag*)':
main.cpp:7:5: error: expected primary-expression before 'volatile'
     volatile (int*) address1;
     ^
main.cpp:7:5: error: expected ';' before 'volatile'
main.cpp:8:5: error: expected primary-expression before 'volatile'
     volatile (int*) address2;
     ^
main.cpp:8:5: error: expected ';' before 'volatile'
main.cpp:21:68: error: 'address' was not declared in this scope
         printf("Pretending to write %d to %p on bit %d\n", value, *address,bit);
                                                                    ^
